k8s/ui/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chess-ui
  template:
    metadata:
      labels:
        app: chess-ui
    spec:
      containers:
        - name: chess-ui
          image: sambanfield/chess-ui:latest
          ports:
            - containerPort: 3000
