k8s/ui/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chess-ui
spec:
  selector:
    app: chess-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
